config/envoy/ssm-p3-c1.yaml
stats_config:
    stats_matcher:
        inclusion_list:
            patterns:
                - prefix: "downstream"
static_resources:
    clusters:
        - name: service-1
          connect_timeout: 3s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: service-1
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.3
                                      port_value: 9999
        - name: service-2
          connect_timeout: 3s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: service-2
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.4
                                      port_value: 9999
        - name: service-3
          connect_timeout: 3s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: service-3
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.5
                                      port_value: 9999
    listeners:
        - name: listener0
          address:
              socket_address:
                  address: 172.17.0.1
                  port_value: 9999

          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          codec_type: AUTO
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: service
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/service-1"
                                              headers:
                                                  - name: "a"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                                  - name: "b"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                          route: { cluster: service-1 }
                                        - match:
                                              prefix: "/service-2"
                                              headers:
                                                  - name: "a"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                                  - name: "b"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                          route: { cluster: service-2 }
                                        - match:
                                              prefix: "/service-3"
                                              headers:
                                                  - name: "a"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                                  - name: "b"
                                                    string_match:
                                                        exact: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [...]
                                          route: { cluster: service-3 }
                          http_filters:
                              - name: envoy.filters.http.rbac
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                                    rules:
                                        action: ALLOW
                                        policies:
                                            "stats-1-v1":
                                                permissions:
                                                    - and_rules:
                                                          rules:
                                                              - header:
                                                                    name: ":method"
                                                                    string_match:
                                                                        exact: "POST"
                                                              - url_path:
                                                                    path:
                                                                        prefix: "/stats"
                                                              - destination_port: 9999
                                                principals:
                                                    - any: true
                                            "service-1-post-policy-v1":
                                                permissions:
                                                    - and_rules:
                                                          rules:
                                                              - header:
                                                                    name: ":method"
                                                                    string_match:
                                                                        exact: "POST"
                                                              - url_path:
                                                                    path:
                                                                        prefix: "/service-1"
                                                              - destination_port: 9999
                                                principals:
                                                    - any: true
                                            "service-2-post-policy-v1":
                                                permissions:
                                                    - and_rules:
                                                          rules:
                                                              - header:
                                                                    name: ":method"
                                                                    string_match:
                                                                        exact: "POST"
                                                              - url_path:
                                                                    path:
                                                                        prefix: "/service-2"
                                                              - destination_port: 9999
                                                principals:
                                                    - any: true
                                            "service-3-post-policy-v1":
                                                permissions:
                                                    - and_rules:
                                                          rules:
                                                              - header:
                                                                    name: ":method"
                                                                    string_match:
                                                                        exact: "POST"
                                                              - url_path:
                                                                    path:
                                                                        prefix: "/service-3"
                                                              - destination_port: 9999
                                                principals:
                                                    - any: true
                              - name: envoy.filters.http.JwtAuthentication
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                                    providers:
                                        jwt_provider1:
                                            audiences:
                                                - echo
                                            issuer: beeline
                                            local_jwks:
                                                inline_string: >-
                                                    {"keys": [
                                                      {"kty":"oct",
                                                      "k": "dGVzdHRlc3QxMjM0NTY3OA==",
                                                      "alg":"HS256"}]}
                                    rules:
                                        - match:
                                              prefix: "/"
                                          requires:
                                              provider_name: jwt_provider1
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
